# fenix

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  makefile
.cargo/: config.toml
boot/: linker.ld  start.S  start.asm  test.asm
include_dir/: Cargo.toml
include_dir/src/: lib.rs
include_programs/: Cargo.toml
include_programs/src/: lib.rs
kernel/: Cargo.toml  build.rs  makefile
kernel/.cargo/: config.toml
kernel/programs/: blink  blink_22  blink_23  blink_fast  i2c_test
kernel/src/: .null-ls_193790_main.rs  exceptions.rs  heap.rs  interrupts.rs  kernel.rs  main.rs  pinmux.rs
libfenix/: Cargo.toml
libfenix/src/: alloc.rs  gpio.rs  i2c.rs  kernel.rs  lib.rs  sys.rs  sysclock.rs
programs/: blink_22  blink_23  blink_fast
shared/: Cargo.toml
shared/src/: gpio.rs  i2c.rs  interrupts.rs  kernel.rs  lib.rs  sys.rs
src/: .null-ls_907099_utils.rs  clock.rs  exceptions.rs  interrupts.rs  kernel.rs  lib.rs  main.rs  pinmux.rs  sys.rs  utils.rs  vectors.rs
src/alloc/: heap.rs  vec.rs
src/asm/: exceptions.S  interrupt.S  interrupts.S  kernel.S  mmu.S  setup.S  software_interrupt.S  software_interrupts.S
src/boards/: mod.rs
src/interfaces/: gpio.rs
src/internals/: clock.rs  clocks.rs  interrupts.S  interrupts.asm  interrupts.rs  mmu.rs  mod.rs  sysclock.rs  tasks.rs  timer.rs
src/peripherals/: gpio.rs  i2c.rs  pinmux.rs
src/sync/: mutex.rs
src/tasks/: mod.rs  scheduler.rs  task.rs  tasks.asm
user/: Cargo.toml  makefile
user/.cargo/: config.toml
user/boot/: linker.ld  wrap.S
user/src/: .null-ls_186333_main.rs  main.rs
(+33 files in other folders)
